# sami_ws

./: README.md
sami_sim/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
sami_sim/behaviors/: Concert.json
sami_sim/launch/: display.launch.py
sami_sim/meshes/: base_link.stl  chest_bend_servo_1.stl  chest_flat_back_link_1.stl  chest_tilt_servo_1.stl  eye_holder_1.stl  head_connector_link_1.stl  head_nod_servo_1.stl  head_shell_1.stl  head_tilt_servo_1.stl  left_ankle_servo_1.stl  left_chest_servo_1.stl  left_elbow_servo_1.stl  left_foot_link_1.stl  left_forearm_link_1.stl  left_forearm_servo_1.stl  left_hand_link_1.stl  left_hip_servo_1.stl  left_knee_servo_1.stl  left_lower_leg_link_1.stl  left_shoulder_connector_link_1.stl  left_shoulder_link_1.stl  left_shoulder_servo_1.stl  left_upper_arm_link_1.stl  left_upper_leg_link_1.stl  neck_connector_link_1.stl  neck_link_1.stl  neck_servo_1.stl  right_ankle_servo_1.stl  right_elbow_servo_1.stl  right_foot_link_1.stl  right_forearm_link_1.stl  right_forearm_servo_1.stl  right_hand_link_1.stl  right_hip_servo_1.stl  right_knee_Servo_1.stl  right_lower_leg_link_1.stl  right_shoulder_connector_link_1.stl  right_shoulder_link_1.stl  right_shoulder_servo_1.stl  right_torso_servo_1.stl  (+3 more)
sami_sim/scripts/: json_joint_publisher.py
sami_sim/urdf/: materials.xacro  sami.gazebo  sami.trans  sami.xacro
